<resources>
    <string name="app_name">CalC ByTauhid</string>
    <string name="textview">TextView</string>
    <string name="number1">Number1</string>
    <string name="number2">Number2</string>
    <string name="result">Result</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>
</resources>